AWT-297 Fix spacing for consecutive form elements

--- a/src/scss/_filterbar.scss
+++ b/src/scss/_filterbar.scss
@@ -465,6 +465,10 @@
     }
   }
 
+  .form__item + .form__item {
+    margin-top: $space-xsmall;
+  }
+
   .swiper-button-prev,
   .swiper-button-next {
     display: none;
